--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">MovieApp</string>
     <string name="popular">Popular</string>
     <string name="top_rated">Top Rated</string>
+    <string name="history">History</string>
+    <string name="settings">Settings</string>
+    <string name="adult_content">Adult Content</string>
 </resources>
